extract data from API response

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Test API</h1>
+    <div id="results-container">
+        <h3 id="recipe-title"></h3>
+        <ul id="ingredients"></ul>
+        <ol id="instructions"></ol>
+    </div>
 
 <script src="./js/script.js"></script>
 </body>
